Ajuste na nomenclatura das APIs