@@ -1,7 +1,6 @@
 package br.com.petmagnet.resource;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -12,8 +11,10 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import br.com.petmagnet.dto.AnuncioDTO;
-import br.com.petmagnet.dto.AnuncioResponseDTO;
+import br.com.petmagnet.dto.AnuncioReqDTO;
+import br.com.petmagnet.dto.AnuncioReqPutDTO;
+import br.com.petmagnet.dto.AnuncioResDTO;
+import br.com.petmagnet.model.Anuncio;
 import br.com.petmagnet.service.AnuncioService;
 import lombok.RequiredArgsConstructor;
 
@@ -26,39 +27,29 @@ public class AnuncioResource {
 	
 	@ResponseStatus(HttpStatus.CREATED)
 	@RequestMapping(method = RequestMethod.POST)
-	public AnuncioResponseDTO cadastrar(@RequestBody AnuncioDTO anuncio) {
-		return this.anuncioService.convertParaDTO(
-					this.anuncioService.cadastrar(anuncio)
-				);
+	public AnuncioResDTO cadastrar(@RequestBody AnuncioReqDTO anuncioDTO) {
+		return new AnuncioResDTO(this.anuncioService.cadastrar((Anuncio) anuncioDTO.toEntity()));
 	}
 
 	@ResponseStatus(HttpStatus.OK)
     @RequestMapping(value = "/{idEstabelecimento}/{idAnuncio}", method = RequestMethod.GET)	
-	public AnuncioResponseDTO consultar(@PathVariable Long idEstabelecimento, @PathVariable Long idAnuncio) {
-		return this.anuncioService.convertParaDTO(
-					this.anuncioService.consultarPorId(idEstabelecimento, idAnuncio).get()
-				);
+	public AnuncioResDTO consultar(@PathVariable Long idEstabelecimento, @PathVariable Long idAnuncio) {
+		return new AnuncioResDTO(this.anuncioService.consultarPorId(idEstabelecimento, idAnuncio).get());
 	}
 	
 	@ResponseStatus(HttpStatus.OK)
     @RequestMapping(value = "/colaborador/{idEstabelecimento}/{idColaborador}", method = RequestMethod.GET)	
-	public List<AnuncioResponseDTO> consultarPorColaborador(@PathVariable Long idEstabelecimento, @PathVariable Long idColaborador) {
-		return this.anuncioService.consultarPorColaborador(idEstabelecimento, idColaborador)
-				.stream().map(anuncioService::convertParaDTO)
-				.collect(Collectors.toList());
+	public List<AnuncioResDTO> consultarPorColaborador(@PathVariable Long idEstabelecimento, @PathVariable Long idColaborador) {
+		return new AnuncioResDTO(this.anuncioService.consultarPorColaborador(idEstabelecimento, idColaborador)).toList();
 	}	
 	
-    @RequestMapping(value = "/{id}", method = RequestMethod.PUT)	
-	public AnuncioResponseDTO alterar(@PathVariable Long id, @RequestBody AnuncioDTO anuncio) {
-    	return this.anuncioService.convertParaDTO(
-    				this.anuncioService.alterar(id, anuncio)
-    			);
+    @RequestMapping(value = "/{idEstabelecimento}/{idColaborador}/{idAnuncio}", method = RequestMethod.PUT)	
+	public AnuncioResDTO alterar(@PathVariable Long idEstabelecimento, @PathVariable Long idColaborador, @PathVariable Long idAnuncio, @RequestBody AnuncioReqPutDTO anuncioDTO) {
+    	return new AnuncioResDTO(this.anuncioService.alterar((Anuncio) anuncioDTO.toEntity(idEstabelecimento, idColaborador, idAnuncio)));
 	}	
 
     @RequestMapping(value = "/{idEstabelecimento}/{idAnuncio}", method = RequestMethod.DELETE)	
-	public AnuncioResponseDTO excluir(@PathVariable Long idEstabelecimento, @PathVariable Long idAnuncio) {
-    	return this.anuncioService.convertParaDTO(
-    				this.anuncioService.excluir(idEstabelecimento, idAnuncio)
-    			);
+	public AnuncioResDTO excluir(@PathVariable Long idEstabelecimento, @PathVariable Long idAnuncio) {
+    	return new AnuncioResDTO(this.anuncioService.excluir(idEstabelecimento, idAnuncio));
 	}	
 }
